# notification_service

./: .gitignore  Dockerfile  Makefile  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 050556f92d5c_add_relations_to_account.py  7c7d606518a1_fix_call_ext_status_code.py  8cf0e6d84b77_add_realm_to_account.py  c81eebdd640f_initial_migration.py  d307289e353f_add_integration_type.py
app/: auth.py  main.py
app/admin/: admin.py  auth.py
app/api/: call.py  mail.py  message.py  npd.py  push.py
app/clients/: call.py  consumer.py  mail.py  message.py  push.py
app/core/: config.py  contants.py  database.py  session.py
app/models/: __init__.py  account.py  base.py  call.py  feature.py  integration.py  mail.py  message.py  message_template.py  push.py
app/schemes/: call.py  mail.py  message.py  push.py
app/utils/: encryptor.py  parser.py  status.py
app/validators/: message.py
